# cozy-reader

./: .eslintrc-auto-import.json  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  postcss.config.cjs  tailwind.config.cjs  vite.config.ts  vue.config.js
.github/workflows/: release-ubuntu-24.04.yml  release.yml  test.yml
public/: index.html
src/: App.vue  main.js  main.ts  style.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  setup.rs
src-tauri/src/handler/: epub_parser.rs  file.rs  funcs.rs  mod.rs
src-tauri/src/theme/: default.json  theme.rs
src/components/common/: AlertToast.vue  BookAdder.vue  BookThumbnail.vue  ExitButton.vue  Footer.vue  Header.vue
src/components/footerbar/: FooterBar.vue
src/components/icons/: IconAddBook.vue  IconContents.vue  IconCycle.vue  IconDocumentWidth.vue  IconDragMove.vue  IconExport.vue  IconFresh.vue  IconHome.vue  IconImport.vue  IconLeftArrow.vue  IconMoon.vue  IconNote.vue  IconPin.vue  IconPlus.vue  IconRefresh.vue  IconRightArrow.vue  IconSetting.vue  IconSun.vue  IconSunMoon.vue  IconThemeChange.vue  IconToBottom.vue  IconToTop.vue  IconWindowClose.vue  IconWindowMax.vue  IconWindowMin.vue  IconYes.vue  index.js
src/components/popups/: PopupAddTheme.vue  PopupAnnotation.vue  PopupChangeDocWidth.vue  PopupNotepad.vue  PopupReaderControler.vue  PopupReaderSettingControler.vue  PopupThemeSelecter.vue
src/components/popups/subPopups/: subPopupSettingChanger.vue  subPopupSwitchToggle.vue
src/components/titlebar/: AppTitleBar.vue  index.js
src/func/: func.vue
src/router/: index.js
src/storage/: index.js
src/store/: index.js  store.js
src/theme/: theme.js  theme.json
src/views/: BookReader.vue  HomeView.vue
