[package]
name = "cozy-reader"
version = "0.1.2"
description = "A simple but nice epub reader"
authors = ["srsng"]
license = "MIT"
edition = "2021"

[lib]
name = "cozy_reader_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
serde_json = "1.0.116"
serde = { version = "1.0.200", features = ["derive"] }
tauri = { version = "2.0.0-rc", features = [] }
# tauri-plugin-http = "2.0.0-rc"
# tauri-plugin-process = "2.0.0-rc"
# tauri-plugin-notification = "2.0.0-rc"
# tauri-plugin-shell = "2.0.0-rc"
# tauri-plugin-os = "2.0.0-rc"
# tauri-plugin-clipboard-manager = "2.1.0-beta.7"
# tauri-plugin-dialog = "2.0.0-rc"
# tauri-plugin-fs = "2.0.0-rc"
tauri-plugin-store = "2.0.0-rc"
epub = "2.1.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.0.0-rc"
tauri-plugin-updater = "2.0.0-rc.0"
